--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@tailwindcss/typography": "^0.5.0",
         "vue": "^3.2.25",
         "vue-router": "^4.0.12",
+        "vue3-toastify": "^0.1.7",
         "vuex": "^4.0.2"
     }
 }
