--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.4.4",
-        "tailwindcss": "^3.0.1",
+        "tailwindcss": "3.3.1",
         "vue-loader": "^16.8.3"
     },
     "dependencies": {
